# qvmmi

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  NOTICE  README.md
cmake/: QVmmiHelpers.cmake
include/: class_size_slave.h  codec.h  fast_input_master.h  fast_master.h  fast_mmi_master.h  fast_mmi_slave.h  master.h  mpi_tags.h  slave.h  slow_check_master.h  sure_finite_slave.h
src/: class_size_slave.cc  codec.cc  fast_input_master.cc  fast_master.cc  fast_mmi_master.cc  fast_mmi_slave.cc  main.cc  master.cc  slave.cc  slow_check_master.cc  sure_finite_slave.cc
